# DevGrabBot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  alembic.ini  pyproject.toml
docs/plans/: 2026-03-04-devgrabbot-design.md  2026-03-04-devgrabbot-implementation.md  2026-03-05-modernization-v2.md  2026-03-08-anti-ban-research.md
docs/services/: ai-engine.md  bot.md  core.md  infrastructure.md  parser.md
scripts/systemd/: devgrab-parser.service  devgrab-scheduler.service  devgrabbot.service
src/ai/: analyzer.py  context.py  openrouter.py  worker.py
src/ai/prompts/: analyze.py  response.py  roadmap.py
src/bot/: bot.py  main.py  states.py
src/bot/handlers/: dev_panel.py  manager.py  manager_panel.py  orders.py  review.py  start.py
src/bot/keyboards/: dev_panel.py  manager_panel.py  orders.py  review.py
src/bot/middlewares/: auth.py
src/bot/services/: analytics.py  broadcast.py  matching.py  notification.py  scheduler.py
src/core/: config.py  database.py  models.py  redis.py  settings_service.py
src/migrations/: env.py
src/migrations/versions/: 08a2e3a77ee7_initial_tables.py  172fb6762889_add_materials_to_orders.py  52cf2f011278_add_taken_at_and_notify_assignments.py  6a78c2818f95_add_group_message_id_to_assignments.py  905352ce8995_add_response_price_to_orders.py  a3b5e7f91c02_add_order_notifications_table.py  (+2 more)
src/parser/: base.py  worker.py
src/parser/profiru/: filters.py  scraper.py
tests/: test_analyzer.py  test_config.py  test_filters.py  test_matching.py  test_models.py  test_openrouter.py  test_parser_base.py  test_settings_service.py
(+6 files in other folders)
