[project]
name = "devgrabbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "selenium>=4.15",
    "webdriver-manager>=4.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
